<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity"
    android:background="@color/colorPrimary">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:cardCornerRadius="35dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">



            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item"
                android:layout_marginTop="30dp"
                android:textSize="21dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txt_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:layout_marginTop="30dp"
                android:textSize="21dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txt_supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier"
                android:layout_marginTop="30dp"
                android:textSize="21dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="45dp"
                android:textSize="21dp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="20dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="Edit"
                    android:backgroundTint="@color/colorPrimary"
                    android:textSize="16dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>